terraform/modules/networking/main.tf
resource "aws_vpc" "this" {
  cidr_block = "10.0.0.0/16"
  enable_dns_support = true
  enable_dns_hostnames = true
  tags = {
      Name = "mern-vpc"
    }
}
resource "aws_subnet" "this" {
  count = 2
  vpc_id = aws_vpc.this.id
  cidr_block = "10.0.${count.index}.0/24"
  availability_zone = element(var.azs, count.index)
  map_public_ip_on_launch = true
  tags ={ Name = "mern-subnet-${count.index}"}
  
}
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id
  }
resource "aws_route_table" "this" {
  vpc_id = aws_vpc.this.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.this.id
    }
}
resource "aws_route_table_association" "this" {
  count = 2
  subnet_id = aws_subnet.this[count.index].id
  route_table_id = aws_route_table.this.id
}
resource "aws_security_group" "backend" {
  vpc_id = aws_vpc.this.id
  name = "mern-sg"
  description = "Security group for the MERN stack application"
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 5000
    to_port     = 5000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
